test/npm/es6/openfl/errors/RangeErrorTest.js
import RangeError from "openfl/errors/RangeError";
import * as assert from "assert";


describe ("ES6 | RangeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var rangeError = new RangeError ();
		assert.notEqual (rangeError, null);
		
	});
	
	
});